Use drawing buffer size for webgl canvas GetImage

The kMaxArea downsizing logic in WebGLRenderingContextBase::Reshape
causes the drawing buffer size to be smaller than the canvas size
if the size would exceed 16 MiPixels. See https://crbug.com/445542
for additional background.

The GetStaticBitmapImage has two separate implementations that
are selected based on the preserve_drawing_buffer attribute. The
non-preserving mode returns an image sized to match the drawing buffer,
while the preserving snapshot used the canvas size.

Change GetImage to use the drawing buffer size also for consistency.

BUG=845742

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I8cb00444e18f075abde881c5bb155ef039f7a68e
Reviewed-on: https://chromium-review.googlesource.com/1153483
Reviewed-by: Brandon Jones <bajones@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578761}
Former-commit-id: c821960613e9a846329da5cad385ee55af95bdcb